@@ -22,6 +22,9 @@ public class SecurityConfig {
     private static final String ROLE_ID_ADMIN =
             System.getenv().getOrDefault("ROLE_ID_ADMIN", "7392841056473829");
 
+    private static final String FRONTEND_URL =
+            System.getenv().getOrDefault("FRONTEND_URL", "https://ubik-app.vercel.app");
+
     @Bean
     public SecurityWebFilterChain securityWebFilterChain(
             ServerHttpSecurity http,
@@ -32,6 +35,7 @@ public class SecurityConfig {
                 .csrf(ServerHttpSecurity.CsrfSpec::disable)
                 .httpBasic(ServerHttpSecurity.HttpBasicSpec::disable)
                 .formLogin(ServerHttpSecurity.FormLoginSpec::disable)
+                .headers(headers -> headers.disable()) // Deshabilita cabeceras de seguridad para evitar duplicados con Nginx
                 .authorizeExchange(exchanges -> exchanges
                         .pathMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .pathMatchers("/api/auth/**").permitAll()
@@ -52,6 +56,9 @@ public class SecurityConfig {
                         .pathMatchers(HttpMethod.DELETE, "/api/services/**").authenticated()
                         .pathMatchers("/api/reservations/**").authenticated()
                         .pathMatchers("/api/user/**").authenticated()
+                        .pathMatchers(HttpMethod.POST, "/api/payments/webhook").permitAll() // Stripe llama sin JWT
+                        .pathMatchers("/api/payments/**").authenticated()
+                        .pathMatchers(HttpMethod.POST, "/api/payments/*/refund").authenticated()
                         .anyExchange().authenticated()
                 )
                 .addFilterAt(jwtFilter, SecurityWebFiltersOrder.AUTHENTICATION)
@@ -61,7 +68,13 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
+        // Use explicit origins — wildcard "*" is invalid when allowCredentials=true per the CORS spec
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+                normalizeUrl(FRONTEND_URL),
+                "https://*--ubik-app.vercel.app",
+                "http://localhost:*",
+                "http://127.0.0.1:*"
+        ));
         configuration.setAllowedMethods(Arrays.asList(
                 "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"
         ));
@@ -76,5 +89,10 @@ public class SecurityConfig {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    /** Remove trailing slash from URLs so pattern matching works correctly */
+    private static String normalizeUrl(String url) {
+        return url.endsWith("/") ? url.substring(0, url.length() - 1) : url;
     }
 }
